--- a/404.html
+++ b/404.html
@@ -7,9 +7,9 @@
       /**
        * Configuration goes here
        */
-      // Format: https://api.github.com/repos/{owner}/{repo}/issues/
+      // Format: https://github.com/chenbinsss/v2ray
       var GITHUB_ISSUES_LINK =
-        "https://api.github.com/repos/mayandev/gh-pages-url-shortener-db/issues/";
+        "https://github.com/chenbinsss/v2ray";
       var PATH_SEGMENTS_TO_SKIP = 1;
 
       /**
