--- a/404.html
+++ b/404.html
@@ -7,9 +7,9 @@
       /**
        * Configuration goes here
        */
-      // Format: https://github.com/chenbinsss/v2ray
+      // Format: https://api.github.com/repos/chenbinssss/v2ray/issues
       var GITHUB_ISSUES_LINK =
-        "https://github.com/chenbinsss/v2ray";
+        "https://api.github.com/repos/chenbinssss/v2ray/issues";
       var PATH_SEGMENTS_TO_SKIP = 1;
 
       /**
